# Patch_Camelyon_2024_MLOPS_G28

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild.yaml  data.dvc  index.html  mkdocs.yaml  ml-ops-ex-b1b1bd7f7ce9.json  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
.github/workflows/: mainflow.yml
Patch_Camelyon_2024_MLOPS_G28/: LICENSE  __init__.py  pyproject.toml  train_model.py
Patch_Camelyon_2024_MLOPS_G28/conf/: config.yaml
Patch_Camelyon_2024_MLOPS_G28/data/: make_dataset.py
Patch_Camelyon_2024_MLOPS_G28/dockerfiles/: train_model.dockerfile
Patch_Camelyon_2024_MLOPS_G28/docs/: mkdocs.yaml
Patch_Camelyon_2024_MLOPS_G28/docs/source/: index.md
Patch_Camelyon_2024_MLOPS_G28/models/: model.py
Patch_Camelyon_2024_MLOPS_G28/patch_camelyon_2024_mlops_g28/: __init__.py
app/: config.yaml  main.py  requirements.txt  requirments.txt
app/backend/: main.py  requirements.txt
app/backend/config/: config.yaml
app/frontend/: index.html
dockerfiles/: backend.dockerfile  cloudbuild.yaml  dummy.py  predict_model.dockerfile  train_model.dockerfile
patch_camelyon_2024_mlops_g28/: __init__.py  predict_model.py  profiling.py  train_model.py
patch_camelyon_2024_mlops_g28/conf/: config.yaml
patch_camelyon_2024_mlops_g28/data/: make_dataset.py
patch_camelyon_2024_mlops_g28/models/: model.py
reports/: README.md
source/: index.md  make_dataset.md  model.md  my_api.md  predictions.md
tests/: __init__.py  data_test.py  model_test.py  predict_test.py  train_test.py
(+19 files in other folders)
